--- a/src/component/globalStyle/globalStyle.scss
+++ b/src/component/globalStyle/globalStyle.scss
@@ -5,6 +5,7 @@
     --primary: rgba(254, 44, 85, 1);
     --border-radius: 23px;
     --white: white;
+    --default-horizontal-padding: 24px;
 }
 
 html {
