--- a/src/layout/DefaultLayout/DefaultLayout.module.scss
+++ b/src/layout/DefaultLayout/DefaultLayout.module.scss
@@ -5,6 +5,7 @@
     align-items: center;
     .container {
         width: 1150px;
+        padding: 0 24px;
         min-height: 1000px;
         background-color: rgb(201, 195, 118);
         display: flex;
