--- a/src/layout/component/Popper/Menu/Menu.module.scss
+++ b/src/layout/component/Popper/Menu/Menu.module.scss
@@ -10,6 +10,8 @@
     font-weight: 550;
     line-height: 22px;
     cursor: pointer;
+    padding-top: 10px;
+    padding-bottom: 10px;
     width: 100%;
     border-radius: 0;
     justify-content: flex-start;
@@ -20,4 +22,28 @@
 
 .customWrapper {
     padding-bottom: 6px;
+}
+
+// headerMenu
+.header {
+    height: 50px;
+    width: 100%;
+    position: relative;
+    margin-top: -8px;
+}
+.back-btn {
+    width: 50px;
+    height: 100%;
+    background-color: transparent;
+    cursor: pointer;
+    font-size: 1.7rem;
+}
+.header-title {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-weight: 500;
+    font-size: 1.8rem;
+    line-height: 22px;
 }
