--- a/src/layout/component/Header/Header.module.scss
+++ b/src/layout/component/Header/Header.module.scss
@@ -41,6 +41,7 @@
         background-color: transparent;
         padding: 4px 10px;
         cursor: pointer;
+        transform: translateY(4px);
     }
 }
 .badge {
